# lifedata-etl

./: .gitignore  ANALYSIS_ACTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HEALTH_CHECK.md  CLAUDE_HEALTH_REPORT.md  CLAUDE_LOG.md  COMPARISON_REPORT.md  CONDENSED_GOALS.md  CONTINUATION_PROMPT.md  EXECUTION_STRATEGY.md  FINAL_PLAN.md  GEMINI_ANALYSIS.md  LIFEDATA_GAP_COVERAGE.md  Makefile  README.md  TASKER_WRITTEN_LIST.md  TERNARY_CLAUDE_ANALYSIS.md  ULTIMATE_REVIEW.md  USER_GUIDE.md  config.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_etl.py
.github/workflows/: ci.yml
.stfolder/: syncthing-folder-342b94.txt
analysis/: __init__.py  anomaly.py  correlator.py  hypothesis.py  registry.py  reports.py
core/: __init__.py  config.py  config_schema.py  database.py  event.py  logger.py  metrics.py  module_interface.py  orchestrator.py  parser_utils.py  sanitizer.py  utils.py
docs/: EXAMINATION_REPORT.md  MASTER_WALKTHROUGH.md  OPERATIONAL_RUNBOOK.md  PERFORMANCE_BASELINE.md  THREAT_MODEL.md
docs/tasker/: TASKER_XML_LIST.md
modules/: __init__.py
modules/behavior/: __init__.py  module.py  parsers.py
modules/body/: __init__.py  module.py  parsers.py
modules/cognition/: __init__.py  module.py  parsers.py
modules/device/: __init__.py  module.py  parsers.py
modules/environment/: __init__.py  module.py  parsers.py
modules/media/: __init__.py  module.py  parsers.py  transcribe.py
modules/meta/: __init__.py  completeness.py  module.py  quality.py  storage.py  sync.py
modules/mind/: __init__.py  module.py  parsers.py
modules/oracle/: __init__.py  module.py  parsers.py
modules/social/: __init__.py  module.py  parsers.py
modules/world/: __init__.py  module.py  parsers.py
scripts/: _http.py  compute_planetary_hours.py  fetch_gdelt.py  fetch_markets.py  fetch_news.py  fetch_rss.py  fetch_schumann.py  process_sensors.py
tests/: conftest.py  test_etl_integration.py  test_metrics.py  test_performance.py  test_provenance.py  test_reliability.py  test_security.py  test_static.py
tests/analysis/: test_anomaly.py  test_correlator.py  test_hypothesis.py  test_registry.py  test_reports.py
tests/core/: test_config.py  test_database.py  test_event.py  test_module_interface.py  test_orchestrator.py  test_utils.py
tests/modules/behavior/: test_parsers.py  (+1 more)
tests/scripts/: test_compute_planetary_hours.py  test_fetch_gdelt.py  test_fetch_markets.py  test_fetch_news.py  test_fetch_rss.py  test_fetch_schumann.py  test_http.py  test_process_sensors.py
(+24 files in other folders)
