[project]
name = "lifedata"
version = "4.0.0"
requires-python = ">=3.11"

# ── Ruff ─────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

# ── Mypy ─────────────────────────────────────────────────────

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "core.*"
strict = true

# ── Pytest ───────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
