[project]
name = "lifedata"
version = "4.0.0"
requires-python = ">=3.11"

# ── Ruff ─────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

# ── Mypy ─────────────────────────────────────────────────────

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "core.*"
strict = true

[[tool.mypy.overrides]]
module = "analysis.*"
strict = false
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = ["nltk.*", "whisper.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
markers = [
    "slow: performance benchmarks (run with: make test-perf)",
    "integration: tests that call external APIs (run with: make test-integration)",
]
addopts = "-m 'not slow and not integration'"
